fixed an issue that there was a white space above the youtube video on the techniques page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,6 +561,10 @@ footer {
     color: #3a3a3a;
 }
 
+.techniques header {
+    height: 0;
+}
+
 iframe {
     width: "100%";
     height: "315";
